--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </style>
 </head>
 <body>
-  <img src="your-logo.png" alt="Bhakti Shakti Bharat Foundation Logo" class="logo">
+   alt="Bhakti Shakti Bharat Foundation Logo" class="logo">
   <h1>Bhakti Shakti Bharat Foundation</h1>
   <p>We are coming soon! A powerful initiative rooted in service, spirituality, and unity. Our foundation is dedicated to uplifting society through seva (service), shakti (empowerment), and bhakti (devotion). Together, let's shape a more compassionate Bharat.</p>
   <p><strong>Launching soon to serve every corner of India with heart, hope, and humanity.</strong></p>
